fix: index.html spacing issues on large tablet devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,3 +478,12 @@ button.btn.btn-primary.game-input:active {
         height: 14vh;
     }
 }
+
+@media (min-height: 1200px) and (min-width: 992px) {
+    .home-images {
+        height: 27vh
+    }
+    .home-record {
+        height: 32vh;
+    }
+}
